Minor changes (#12)